--- a/aboutme.html
+++ b/aboutme.html
@@ -19,12 +19,13 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Marck+Script">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="username">Your Name</h1>
+            <h1 class="username">Austin Zwirn</h1>
         </div>
         <hr class="line">
         <div class="row">
